Sun May  4 22:16:57 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: Do not check for ssh anymore since it is never
	  used automatically.

Fri Apr 25 18:11:16 1997  Laurent Pautet <pautet@inf.enst.fr>

	* configure.in : get rid of RACW.

Thu Apr 24 16:55:02 1997  Laurent Pautet <pautet@inf.enst.fr>

	* INSTALL: .rhost --> .rhosts.

	* README: Various modifications motivated by LG comments
	  before 1.02 release.

Tue Apr 22 17:24:29 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* README: Tell the user to include GNATDIST -v output when
	  reporting a GNATDIST bug.

Mon Apr 22 10:34:24 1997  Laurent Pautet <pautet@inf.enst.fr>

	* README: Reference NEWS. Acknowledge zlib usage.

	* NEWS: Reformat and fix typos.


	* NEWS: New file.

Wed Apr  9 15:35:14 1997  Samuel Tardieu  <sam@zaphod.enst.fr>

	* configure.in: Use zip filter by default.

Mon Apr  7 12:43:26 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: Modified for automake 1.1n. Removed references to
	  xe-gcc*.

Wed Apr  2 18:47:27 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* README: Move a paragraph (concerning T.Wolf) from user_guide.txt
 	to README.

Tue Apr  1 15:32:11 1997  Samuel Tardieu  <sam@zaphod.enst.fr>

	* README: Fixed a bogus WWW address and add the address of ACT
 	Europe GLADE page.

Thu Mar 13 17:18:45 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>

	* configure.in: Add Examples/LightBank.

	* configure: Modified (configure.in).

Fri Mar 21 11:34:38 1997  Samuel Tardieu  <sam@zaphod.enst.fr>

	* aclocal.m4: Automatically generated by automake 1.1m.

	* missing: New file.
	
Sat Mar  8 17:40:31 1997  Laurent Pautet  <pautet@inf.enst.fr>

	* configure.in: Add Bank to the list of Makefiles to configure.

Fri Mar  7 18:54:11 1997  Laurent Pautet  <pautet@inf.enst.fr>

	* configure.in, configure: Add --with-remsh to set the rsh command
 	we use.

Fri Feb 28 15:00:11 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: Standard help strings for --with-filters and