@@ -1,6 +1,6 @@
 AUTOMAKE_OPTIONS = foreign
 
-SUBDIRS = Eratho Bank LightBank
+SUBDIRS = Eratho Bank LightBank Messages
 
 CLEANFILES = check-stamp
 DISTCLEANFILES = check-config
