@@ -1,3 +1,7 @@
+Wed May  7 18:19:09 1997  Samuel Tardieu  <sam@inf.enst.fr>
+
+	* Messages/Makefile.am: Changed bogus pathes.
+
 Tue Apr 29 12:26:03 1997  Laurent Pautet  <pautet@dorine.enst.fr>
 
 	* check-config.in: Use $RSH instead of rsh (HP).
